syntax = "proto3";

package product_service;

import "google/protobuf/empty.proto";

option java_package = "com.example.proto.product";
option java_multiple_files = true;

message ErrorResponse {
  int32 status = 1;
  string message = 2;
}

message UpdateProduct {
  int64 id = 1;
  int32 quantity = 2;
}

message UpdateProductRequest {
  repeated UpdateProduct products = 1;
}

message UpdateProductResponse {
  oneof response {
    google.protobuf.Empty successResponse = 1;
    ErrorResponse errorResponse = 2;
  }
}

service ProductService {
  rpc updateProducts(UpdateProductRequest) returns (UpdateProductResponse) {}
}