syntax = "proto3";

import "google/protobuf/empty.proto";

package order_service;

option java_package = "com.example.order_service.proto";
option java_multiple_files = true;

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 quantity = 4;
}

message CreateProductResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 quantity = 5;
}

message GetAllProductsResponse {
  repeated CreateProductResponse products = 1;
}

message ProductIdRequest {
  int32 id = 1;
}

message UpdateProductQuantityRequest {
  int32 id = 1;
  int32 quantity = 2;
}

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc GetAllProducts(google.protobuf.Empty) returns (GetAllProductsResponse) {}
  rpc GetProduct(ProductIdRequest) returns (CreateProductResponse) {}
  rpc DeleteProduct(ProductIdRequest) returns (ProductIdRequest) {}
  rpc AddProducts(UpdateProductQuantityRequest) returns (CreateProductResponse) {}
  rpc RemoveProducts(UpdateProductQuantityRequest) returns (CreateProductResponse) {}
}